test to connect with FAS framework

--- a/01-Running Activity from different projects/TestLinking2/project.properties
+++ b/01-Running Activity from different projects/TestLinking2/project.properties
@@ -14,3 +14,4 @@
 target=android-19
 android.library.reference.1=../TestLinking1
 android.library=false
+android.library.reference.2=../../../FlexibleAlertScheduling
