--- a/01-Running Activity from different projects/TestLinking2/bin/AndroidManifest.xml
+++ b/01-Running Activity from different projects/TestLinking2/bin/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
-
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,9 +25,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.example.testlinking1.MainActivity">
+        <activity android:name="com.example.testlinking1.MainActivity" >
         </activity>
+        <activity android:name="com.example.testlinking1.Activity2" />
+        <activity android:name="com.riandy.flexiblealertscheduling.AlarmListActivity1" />
+        <activity android:name="com.riandy.flexiblealertscheduling.AlarmDetailsActivity" />
+        <activity android:name="com.riandy.flexiblealertscheduling.AlarmScreen" />
+        <service
+            android:name="com.riandy.flexiblealertscheduling.AlarmService"
+            android:enabled="true" />
     </application>
 
 </manifest>
